// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard > snapshots > variant=default 1`] = `
<div
  class="text-card-foreground rounded-lg bg-card p-2 border border-subtle"
>
  <div
    class="flex flex-col gap-1"
  >
    <p
      class="text-sm font-medium text-muted-foreground uppercase tracking-wide"
    >
      Overdue
    </p>
    <p
      class="text-4xl font-medium tabular-nums leading-none text-foreground"
    >
      12
    </p>
    <p
      class="text-sm leading-4 text-muted-foreground"
    >
      Last 30 days
    </p>
  </div>
</div>
`;

exports[`StatCard > snapshots > variant=success 1`] = `
<div
  class="text-card-foreground rounded-lg bg-card p-2 border border-subtle"
>
  <div
    class="flex flex-col gap-1"
  >
    <p
      class="text-sm font-medium text-muted-foreground uppercase tracking-wide"
    >
      Overdue
    </p>
    <p
      class="text-4xl font-medium tabular-nums leading-none text-success"
    >
      12
    </p>
    <p
      class="text-sm leading-4 text-muted-foreground"
    >
      Last 30 days
    </p>
  </div>
</div>
`;

exports[`StatCard > snapshots > variant=urgent 1`] = `
<div
  class="text-card-foreground rounded-lg bg-card p-2 border border-subtle"
>
  <div
    class="flex flex-col gap-1"
  >
    <p
      class="text-sm font-medium text-muted-foreground uppercase tracking-wide"
    >
      Overdue
    </p>
    <p
      class="text-4xl font-medium tabular-nums leading-none text-destructive"
    >
      12
    </p>
    <p
      class="text-sm leading-4 text-muted-foreground"
    >
      Last 30 days
    </p>
  </div>
</div>
`;

exports[`StatCard > snapshots > variant=warning 1`] = `
<div
  class="text-card-foreground rounded-lg bg-card p-2 border border-subtle"
>
  <div
    class="flex flex-col gap-1"
  >
    <p
      class="text-sm font-medium text-muted-foreground uppercase tracking-wide"
    >
      Overdue
    </p>
    <p
      class="text-4xl font-medium tabular-nums leading-none text-warning"
    >
      12
    </p>
    <p
      class="text-sm leading-4 text-muted-foreground"
    >
      Last 30 days
    </p>
  </div>
</div>
`;
